--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,11 @@
 
     <groupId>com.procurier</groupId>
     <artifactId>procurier-parent</artifactId>
+    <packaging>pom</packaging>
     <version>1.0-SNAPSHOT</version>
+    <modules>
+        <module>core-modul</module>
+    </modules>
 
     <properties>
             <java.version>11</java.version>
