--- a/pom.xml
+++ b/pom.xml
@@ -9,7 +9,8 @@
     <packaging>pom</packaging>
     <version>1.0-SNAPSHOT</version>
     <modules>
-        <module>core-modul</module>
+        <module>core-model</module>
+        <module>orders-service</module>
     </modules>
 
     <properties>
